# DTD

./: CMakeLists.txt
glad/include/glad/: glad.h
glad/src/: glad.c
resources/shaders/: s.frag  s.vert
src/: camera.c  camera.h  main.c  window.c  window.h
src/math/: matrix.c  matrix.h  rad.c  rad.h  vector.c  vector.h
src/utility/: log.c  log.h
tests/: matrix-tests.c  vector-tests.c
